<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="xb3group.com.nutritionfreak.CreateAccountActivity"
    tools:showIn="@layout/activity_create_account"
    android:background="#00c5ff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_string"
        android:id="@+id/emailTextViewID"
        android:textColor="#ffffff"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/newEmailEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextViewID"
        android:textColor="#ffffff"
        />

    <TextView
        android:id="@+id/createPasswordTextViewID"
        android:textSize="22sp"
        android:text="@string/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_below="@+id/newEmailEditText"
        />

    <EditText
        android:id="@+id/newPasswordEditTextID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@id/createPasswordTextViewID"
        android:textColor="#ffffff"
        />

    <TextView
        android:id="@+id/confirmPasswordTextViewID"
        android:text="@string/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPasswordEditTextID"
        android:textColor="#ffffff"
        android:textSize="22sp"

        />

    <EditText
        android:id="@+id/confirmPasswordEditTextID"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordTextViewID"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/createAccountButtonID"
        android:text="@string/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/confirmPasswordEditTextID"
        android:textColor="#ffffff"
        android:background="#00b0e6"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="90dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signUpTitle"
        android:id="@+id/signUpTitleID"
        android:layout_alignParentTop="true"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
