<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="xb3group.com.nutritionfreak.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="#00c5ff">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email_string"
                android:id="@+id/emailTextView"
                android:textColor="#ffffff"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="90dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/passwordText"
                android:textColor="#ffffff"
                android:id="@+id/passwordTextView"
                android:layout_below="@+id/emailTextView"
                android:layout_marginTop="63dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"
                android:layout_below="@+id/emailTextView"
                android:textColor="#ffffff"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordEditText"
                android:textColor="#ffffff"
                android:layout_below="@+id/passwordTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_account_yet"
                android:id="@+id/noAccountYetTextView"
                android:layout_below="@+id/loginButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="96dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/logIn"
                android:id="@+id/loginButton"
                android:background="#00b0e6"
                android:layout_below="@+id/passwordEditText"
                android:textColor="#ffffff"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="42dp" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"
                android:id="@+id/logoImageViewID"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


    </ScrollView>




</RelativeLayout>
